--- a/SnacksApp/AppShell.xaml
+++ b/SnacksApp/AppShell.xaml
@@ -5,9 +5,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SnacksApp"
     Shell.FlyoutBehavior="Disabled"
-       Shell.TabBarBackgroundColor="#a90409"
-       Shell.TabBarTitleColor="White"
-       Shell.TabBarUnselectedColor="FloralWhite">
+       Shell.NavBarHasShadow="True"
+       Shell.BackgroundColor="#2196F3"
+       Shell.ForegroundColor="White"
+       Shell.TitleColor="White"
+       Shell.UnselectedColor="White"
+       Shell.DisabledColor="#BFBFBF"
+       Shell.TabBarTitleColor="AntiqueWhite"
+       Shell.TabBarBackgroundColor="#2196F3"
+       Shell.TabBarForegroundColor="White">
 
     
 
