Display product details

--- a/SnacksApp/Pages/ListProductsPage.xaml
+++ b/SnacksApp/Pages/ListProductsPage.xaml
@@ -5,7 +5,8 @@
              Title="ListProductsPage">
     <CollectionView x:Name="CvProducts"
                  SelectionMode="Single"
-                 Margin="10">
+                 Margin="10"
+                    SelectionChanged="CvProducts_SelectionChanged">
 
         <CollectionView.ItemsLayout>
             <GridItemsLayout Orientation="Vertical"
