--- a/SnacksApp/Pages/FavoritePage.xaml
+++ b/SnacksApp/Pages/FavoritePage.xaml
@@ -4,9 +4,56 @@
              x:Class="SnacksApp.Pages.FavoritePage"
              Title="FavoritePage">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+
+        <Label x:Name="LblWarning" 
+               Text="Nenhum item favorito selecionado."
+               FontSize="15"
+               FontAttributes="Bold"
+               TextColor="Red"
+               HorizontalOptions="Center"
+               VerticalOptions="Center"
+               IsVisible="False"/>
+
+        <CollectionView x:Name="CvProducts"
+                    SelectionMode="Single"
+                    Margin="5"
+                    SelectionChanged="CvProducts_SelectionChanged">
+
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical"
+                             Span="2"
+                             HorizontalItemSpacing="10"
+                             VerticalItemSpacing="10" />
+            </CollectionView.ItemsLayout>
+
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Border VerticalOptions="Start"
+                        StrokeShape="RoundRectangle 10,10,10,10"
+                        Padding="10">
+                        <Grid RowSpacing="5"
+                          RowDefinitions="Auto,Auto,Auto">
+
+                            <Image Aspect="AspectFill"
+                                   HeightRequest="130"
+                                   Source="{Binding ImageUrl}" />
+
+                            <Label Grid.Row="1"
+                               FontAttributes="Bold"
+                               LineBreakMode="WordWrap"
+                               FontSize="12"    
+                               MaxLines="2"
+                               Text="{Binding Name}" />
+
+                            <Label Grid.Row="2"
+                               FontAttributes="Bold"
+                               Text="{Binding Price,StringFormat='€ {0:F2}'}" />
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </VerticalStackLayout>
+
 </ContentPage>
